# keep-mcp-http

./: API_DOCUMENTATION.md  README.md  docker-compose.yml  pyproject.toml
.cursor/: mcp.json
src/server/: cli.py  keep_api.py  rest_api.py
